<resources>
    <string name="app_name">Vaccin</string>
    <string name="action_settings">Pramètres</string>
    <string name="slogan">Vaccin pour tous</string>
    <string name="title_activity_vaccins">Liste Vaccins</string>
    <string name="title_activity_vaccins_voyage">Vaccination voyage</string>
    <string name="title_activity_actualites">Actualites</string>
    <string name="title_activity_vaccins_calendrier">Calendrier vaccinal</string>
    <string name="title_activity_abreviations">Abbréviation</string>
    <string name="title_activity_mon_dossier_famille">Mon dossier famille</string>
    <string name="title_activity_mon_profil">Mon profil</string>
    <string name="title_activity_about">A propos</string>
    <string name="vaccination">La vaccination est un procédé consistant à introduire un agent extérieur (le vaccin) dans un organisme vivant afin de créer une réaction immunitaire positive contre une maladie infectieuse.\n\n La substance active d’un vaccin est un antigène dont la pathogénicité est atténuée destiné à stimuler les défenses naturelles de l\'organisme (le système immunitaire).\n\nLa réaction immunitaire primaire permet en parallèle une mise en mémoire de l\'antigène présenté pour qu\'à l\'avenir, lors d\'une contamination vraie, l\'immunité acquise puisse s\'activer de façon plus rapide et plus forte.</string>
    <string name="vaccin_type_1">Une fois les agents infectieux identifiés et isolés, on les multiplie en très grand nombre avant de les détruire chimiquement ou par la chaleur.\n\nCependant, ils conservent tout de même leur capacité à provoquer une réaction immunitaire. De cette façon des vaccins sont produits par exemple contre la grippe, la poliomyélite (injectable), le choléra, la peste ou l’hépatite A.\n\nDes informations récentes laissent supposer que les agents pathogènes peuvent être électrocutés[réf. nécessaire]. Cette méthode, appliquée en dehors des précédentes, permet d\'élargir la gamme des moyens d\'éradication des micro-organismes infectieux, aussi bien pour les souches d\'origine bactérienne que virale, etc.</string>
    <string name="vaccin_type_2">Les agents infectieux sont multipliés en laboratoire jusqu’à ce qu’ils perdent naturellement ou artificiellement, par mutation, leur caractère pathogène.\n\n Les souches obtenues sont alors incapables de développer entièrement la maladie qu’elles causaient auparavant, mais conservent cependant leurs antigènes et leurs capacités à induire des réponses immunitaires.\n\nCe genre de vaccin est généralement plus efficace et son effet plus durable que celui qui est composé d’agents infectieux inactivés. En revanche, comme il est constitué de micro-organismes dont la viabilité doit être maintenue pour être efficace, sa conservation est plus difficile.\n\nLes vaccins contre les virus de l’hépatite B ou contre les papillomavirus sont ainsi constitués des protéines qui se trouvent naturellement à la surface de ces virus. Généralement ces antigènes sont produits par des levures modifiées par génie génétique, afin qu\'elles produisent en grandes quantités les protéines d\'intérêt.\n\nÉliminant tout risque de contamination, ces vaccins demandent cependant à ce que les mécanismes d\'immunogénicité associés aux infections visées soient bien connus, et que les protéines de surface des agents infectieux soient stables et définies.</string>
    <string name="vaccin_type_3">Ces vaccins sont constitués des molécules de surface provenant des agents infectieux afin d\'obtenir des réponses immunitaires sans avoir à conserver, inactiver et introduire le virus concerné.</string>
    <string name="vaccin_type_4">Début mai 2008, Denis Leclerc a proposé20 d\'utiliser un virus végétal (qui ne peut se reproduire chez l\'homme) comme pseudovirion jouant le rôle d\'adjuvant, pour rendre des vaccins plus longuement efficaces contre des virus qui mutent souvent (virus de la grippe ou de l\'hépatite C, voire contre certains cancers).\n\nLe principe est d\'associer à ce pseudovirion une protéine-cible interne aux virus, bactéries ou cellules cancéreuses à attaquer, et non comme on le fait jusqu\'ici une des protéines externes qui sont celles qui mutent le plus.\n\nCe nouveau type de vaccin, qui doit encore faire les preuves de son innocuité et de son efficacité, déclencherait une réaction immunitaire à l\'intérieur des cellules, au moment de la réplication virale.</string>
    <string name="title_activity_vaccination_definition">Vaccination</string>
    <string name="title_activity_vaccin">Vaccin</string>
    <string name="title_activity_pays">Pays</string>
    <string name="title_activity_vaccins_voyage_type">Vaccination voyage</string>
    <string name="title_activity_actualite">Actualité</string>
    <string name="action_about">A propos</string>
    <string name="title_activity_calendrier">Calendrier</string>
</resources>
